// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Card graphical (JSX) should add custom className 1`] = `
<div
  className="card custom"
  style={Object {}}
/>
`;

exports[`common/Card graphical (JSX) should add custom style 1`] = `
<div
  className="card"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
/>
`;

exports[`common/Card graphical (JSX) should have a default behaviour 1`] = `
<div
  className="card"
  style={Object {}}
/>
`;

exports[`common/Card graphical (JSX) should print the children 1`] = `
<div
  className="card"
  style={Object {}}
>
  <div>
    Children 
    {}
  </div>
</div>
`;

exports[`common/Card graphical (JSX) should print the children with a closed prop 1`] = `
<div
  className="card closed"
  style={Object {}}
>
  <div>
    Children 
    {"closed":true}
  </div>
</div>
`;

exports[`common/Card graphical (JSX) should print the closed element 1`] = `
<div
  className="card closed"
  style={Object {}}
>
  close elm
</div>
`;
